# DS-MLE-Repositorio-Base

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/demo/: eval.yaml  train.yaml
data/: README.md
notebooks/: 00_quickstart.ipynb
scripts/: evaluate_demo.py  make_demo_data.py  train_demo.py
src/project_name/: cli.py  config.py
src/project_name/data/: io.py
src/project_name/evaluation/: metrics.py  reporting.py
src/project_name/features/: build_features.py
src/project_name/models/: train.py
src/project_name/utils/: logging.py
tests/smoke/: test_smoke_pipeline.py
tests/unit/: test_metrics.py
